ctpgo/cctptrade_api_darwin.h

// 请求查询报单手续费响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInstrumentOrderCommRate(void* spi, void* func);
// 请求查询资金账户响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySecAgentTradingAccount(void* spi, void* func);
// 请求查询二级代理商资金校验模式响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySecAgentCheckMode(void* spi, void* func);
// 请求查询二级代理商信息响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQrySecAgentTradeInfo(void* spi, void* func);
// 请求查询期权交易成本响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryOptionInstrTradeCost(void* spi, void* func);
// 请求查询期权合约手续费响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryOptionInstrCommRate(void* spi, void* func);
// 请求查询执行宣告响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryExecOrder(void* spi, void* func);
// 请求查询询价响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryForQuote(void* spi, void* func);
// 请求查询报价响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryQuote(void* spi, void* func);
// 请求查询期权自对冲响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryOptionSelfClose(void* spi, void* func);
// 请求查询投资单元响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInvestUnit(void* spi, void* func);
// 请求查询组合合约安全系数响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryCombInstrumentGuard(void* spi, void* func);
// 请求查询申请组合响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryCombAction(void* spi, void* func);
// 请求查询转帐流水响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryTransferSerial(void* spi, void* func);
// 请求查询银期签约关系响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryAccountregister(void* spi, void* func);
// 错误应答
DLL_EXPORT_C_DECL void WPCTP tOnRspError(void* spi, void* func);
// 报单通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnOrder(void* spi, void* func);
// 成交通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnTrade(void* spi, void* func);
// 报单录入错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnOrderInsert(void* spi, void* func);
// 报单操作错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnOrderAction(void* spi, void* func);
// 合约交易状态通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnInstrumentStatus(void* spi, void* func);
// 交易所公告通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnBulletin(void* spi, void* func);
// 交易通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnTradingNotice(void* spi, void* func);
// 提示条件单校验错误
DLL_EXPORT_C_DECL void WPCTP tOnRtnErrorConditionalOrder(void* spi, void* func);
// 执行宣告通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnExecOrder(void* spi, void* func);
// 执行宣告录入错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnExecOrderInsert(void* spi, void* func);
// 执行宣告操作错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnExecOrderAction(void* spi, void* func);
// 询价录入错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnForQuoteInsert(void* spi, void* func);
// 报价通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnQuote(void* spi, void* func);
// 报价录入错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnQuoteInsert(void* spi, void* func);
// 报价操作错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnQuoteAction(void* spi, void* func);
// 询价通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnForQuoteRsp(void* spi, void* func);
// 保证金监控中心用户令牌
DLL_EXPORT_C_DECL void WPCTP tOnRtnCFMMCTradingAccountToken(void* spi, void* func);