pyctp/macos/ctptrade_api.py

        self.FP_OnRspQryInstrumentOrderCommRate = CFUNCTYPE(None, POINTER(CThostFtdcInstrumentOrderCommRateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInstrumentOrderCommRate)
        self.h.tOnRspQryInstrumentOrderCommRate(self.pSpi, self.FP_OnRspQryInstrumentOrderCommRate)
        # 请求查询资金账户响应
        self.h.tOnRspQrySecAgentTradingAccount.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySecAgentTradingAccount.restype = None
        self.FP_OnRspQrySecAgentTradingAccount = CFUNCTYPE(None, POINTER(CThostFtdcTradingAccountField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySecAgentTradingAccount)
        self.h.tOnRspQrySecAgentTradingAccount(self.pSpi, self.FP_OnRspQrySecAgentTradingAccount)
        # 请求查询二级代理商资金校验模式响应
        self.h.tOnRspQrySecAgentCheckMode.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySecAgentCheckMode.restype = None
        self.FP_OnRspQrySecAgentCheckMode = CFUNCTYPE(None, POINTER(CThostFtdcSecAgentCheckModeField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySecAgentCheckMode)
        self.h.tOnRspQrySecAgentCheckMode(self.pSpi, self.FP_OnRspQrySecAgentCheckMode)
        # 请求查询二级代理商信息响应
        self.h.tOnRspQrySecAgentTradeInfo.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQrySecAgentTradeInfo.restype = None
        self.FP_OnRspQrySecAgentTradeInfo = CFUNCTYPE(None, POINTER(CThostFtdcSecAgentTradeInfoField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQrySecAgentTradeInfo)
        self.h.tOnRspQrySecAgentTradeInfo(self.pSpi, self.FP_OnRspQrySecAgentTradeInfo)
        # 请求查询期权交易成本响应
        self.h.tOnRspQryOptionInstrTradeCost.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryOptionInstrTradeCost.restype = None
        self.FP_OnRspQryOptionInstrTradeCost = CFUNCTYPE(None, POINTER(CThostFtdcOptionInstrTradeCostField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryOptionInstrTradeCost)
        self.h.tOnRspQryOptionInstrTradeCost(self.pSpi, self.FP_OnRspQryOptionInstrTradeCost)
        # 请求查询期权合约手续费响应
        self.h.tOnRspQryOptionInstrCommRate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryOptionInstrCommRate.restype = None
        self.FP_OnRspQryOptionInstrCommRate = CFUNCTYPE(None, POINTER(CThostFtdcOptionInstrCommRateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryOptionInstrCommRate)
        self.h.tOnRspQryOptionInstrCommRate(self.pSpi, self.FP_OnRspQryOptionInstrCommRate)
        # 请求查询执行宣告响应
        self.h.tOnRspQryExecOrder.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryExecOrder.restype = None
        self.FP_OnRspQryExecOrder = CFUNCTYPE(None, POINTER(CThostFtdcExecOrderField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryExecOrder)
        self.h.tOnRspQryExecOrder(self.pSpi, self.FP_OnRspQryExecOrder)
        # 请求查询询价响应
        self.h.tOnRspQryForQuote.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryForQuote.restype = None
        self.FP_OnRspQryForQuote = CFUNCTYPE(None, POINTER(CThostFtdcForQuoteField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryForQuote)
        self.h.tOnRspQryForQuote(self.pSpi, self.FP_OnRspQryForQuote)
        # 请求查询报价响应
        self.h.tOnRspQryQuote.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryQuote.restype = None
        self.FP_OnRspQryQuote = CFUNCTYPE(None, POINTER(CThostFtdcQuoteField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryQuote)
        self.h.tOnRspQryQuote(self.pSpi, self.FP_OnRspQryQuote)
        # 请求查询期权自对冲响应
        self.h.tOnRspQryOptionSelfClose.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryOptionSelfClose.restype = None
        self.FP_OnRspQryOptionSelfClose = CFUNCTYPE(None, POINTER(CThostFtdcOptionSelfCloseField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryOptionSelfClose)
        self.h.tOnRspQryOptionSelfClose(self.pSpi, self.FP_OnRspQryOptionSelfClose)
        # 请求查询投资单元响应
        self.h.tOnRspQryInvestUnit.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInvestUnit.restype = None
        self.FP_OnRspQryInvestUnit = CFUNCTYPE(None, POINTER(CThostFtdcInvestUnitField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryInvestUnit)
        self.h.tOnRspQryInvestUnit(self.pSpi, self.FP_OnRspQryInvestUnit)
        # 请求查询组合合约安全系数响应
        self.h.tOnRspQryCombInstrumentGuard.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryCombInstrumentGuard.restype = None
        self.FP_OnRspQryCombInstrumentGuard = CFUNCTYPE(None, POINTER(CThostFtdcCombInstrumentGuardField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryCombInstrumentGuard)
        self.h.tOnRspQryCombInstrumentGuard(self.pSpi, self.FP_OnRspQryCombInstrumentGuard)
        # 请求查询申请组合响应
        self.h.tOnRspQryCombAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryCombAction.restype = None
        self.FP_OnRspQryCombAction = CFUNCTYPE(None, POINTER(CThostFtdcCombActionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryCombAction)
        self.h.tOnRspQryCombAction(self.pSpi, self.FP_OnRspQryCombAction)
        # 请求查询转帐流水响应
        self.h.tOnRspQryTransferSerial.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryTransferSerial.restype = None
        self.FP_OnRspQryTransferSerial = CFUNCTYPE(None, POINTER(CThostFtdcTransferSerialField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryTransferSerial)
        self.h.tOnRspQryTransferSerial(self.pSpi, self.FP_OnRspQryTransferSerial)
        # 请求查询银期签约关系响应
        self.h.tOnRspQryAccountregister.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryAccountregister.restype = None
        self.FP_OnRspQryAccountregister = CFUNCTYPE(None, POINTER(CThostFtdcAccountregisterField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryAccountregister)
        self.h.tOnRspQryAccountregister(self.pSpi, self.FP_OnRspQryAccountregister)
        # 错误应答
        self.h.tOnRspError.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspError.restype = None
        self.FP_OnRspError = CFUNCTYPE(None, POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspError)
        self.h.tOnRspError(self.pSpi, self.FP_OnRspError)
        # 报单通知
        self.h.tOnRtnOrder.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnOrder.restype = None
        self.FP_OnRtnOrder = CFUNCTYPE(None, POINTER(CThostFtdcOrderField))(self.__OnRtnOrder)
        self.h.tOnRtnOrder(self.pSpi, self.FP_OnRtnOrder)
        # 成交通知
        self.h.tOnRtnTrade.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnTrade.restype = None
        self.FP_OnRtnTrade = CFUNCTYPE(None, POINTER(CThostFtdcTradeField))(self.__OnRtnTrade)
        self.h.tOnRtnTrade(self.pSpi, self.FP_OnRtnTrade)
        # 报单录入错误回报
        self.h.tOnErrRtnOrderInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnOrderInsert.restype = None
        self.FP_OnErrRtnOrderInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputOrderField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnOrderInsert)
        self.h.tOnErrRtnOrderInsert(self.pSpi, self.FP_OnErrRtnOrderInsert)
        # 报单操作错误回报
        self.h.tOnErrRtnOrderAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnOrderAction.restype = None
        self.FP_OnErrRtnOrderAction = CFUNCTYPE(None, POINTER(CThostFtdcOrderActionField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnOrderAction)
        self.h.tOnErrRtnOrderAction(self.pSpi, self.FP_OnErrRtnOrderAction)
        # 合约交易状态通知
        self.h.tOnRtnInstrumentStatus.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnInstrumentStatus.restype = None
        self.FP_OnRtnInstrumentStatus = CFUNCTYPE(None, POINTER(CThostFtdcInstrumentStatusField))(self.__OnRtnInstrumentStatus)
        self.h.tOnRtnInstrumentStatus(self.pSpi, self.FP_OnRtnInstrumentStatus)
        # 交易所公告通知
        self.h.tOnRtnBulletin.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnBulletin.restype = None
        self.FP_OnRtnBulletin = CFUNCTYPE(None, POINTER(CThostFtdcBulletinField))(self.__OnRtnBulletin)
        self.h.tOnRtnBulletin(self.pSpi, self.FP_OnRtnBulletin)
        # 交易通知
        self.h.tOnRtnTradingNotice.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnTradingNotice.restype = None
        self.FP_OnRtnTradingNotice = CFUNCTYPE(None, POINTER(CThostFtdcTradingNoticeInfoField))(self.__OnRtnTradingNotice)
        self.h.tOnRtnTradingNotice(self.pSpi, self.FP_OnRtnTradingNotice)
        # 提示条件单校验错误
        self.h.tOnRtnErrorConditionalOrder.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnErrorConditionalOrder.restype = None
        self.FP_OnRtnErrorConditionalOrder = CFUNCTYPE(None, POINTER(CThostFtdcErrorConditionalOrderField))(self.__OnRtnErrorConditionalOrder)
        self.h.tOnRtnErrorConditionalOrder(self.pSpi, self.FP_OnRtnErrorConditionalOrder)
        # 执行宣告通知
        self.h.tOnRtnExecOrder.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnExecOrder.restype = None
        self.FP_OnRtnExecOrder = CFUNCTYPE(None, POINTER(CThostFtdcExecOrderField))(self.__OnRtnExecOrder)
        self.h.tOnRtnExecOrder(self.pSpi, self.FP_OnRtnExecOrder)
        # 执行宣告录入错误回报
        self.h.tOnErrRtnExecOrderInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnExecOrderInsert.restype = None
        self.FP_OnErrRtnExecOrderInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputExecOrderField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnExecOrderInsert)
        self.h.tOnErrRtnExecOrderInsert(self.pSpi, self.FP_OnErrRtnExecOrderInsert)
        # 执行宣告操作错误回报
        self.h.tOnErrRtnExecOrderAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnExecOrderAction.restype = None
        self.FP_OnErrRtnExecOrderAction = CFUNCTYPE(None, POINTER(CThostFtdcExecOrderActionField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnExecOrderAction)
        self.h.tOnErrRtnExecOrderAction(self.pSpi, self.FP_OnErrRtnExecOrderAction)
        # 询价录入错误回报
        self.h.tOnErrRtnForQuoteInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnForQuoteInsert.restype = None
        self.FP_OnErrRtnForQuoteInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputForQuoteField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnForQuoteInsert)
        self.h.tOnErrRtnForQuoteInsert(self.pSpi, self.FP_OnErrRtnForQuoteInsert)
        # 报价通知
        self.h.tOnRtnQuote.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnQuote.restype = None
        self.FP_OnRtnQuote = CFUNCTYPE(None, POINTER(CThostFtdcQuoteField))(self.__OnRtnQuote)
        self.h.tOnRtnQuote(self.pSpi, self.FP_OnRtnQuote)
        # 报价录入错误回报
        self.h.tOnErrRtnQuoteInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnQuoteInsert.restype = None
        self.FP_OnErrRtnQuoteInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputQuoteField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnQuoteInsert)
        self.h.tOnErrRtnQuoteInsert(self.pSpi, self.FP_OnErrRtnQuoteInsert)
        # 报价操作错误回报
        self.h.tOnErrRtnQuoteAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnQuoteAction.restype = None
        self.FP_OnErrRtnQuoteAction = CFUNCTYPE(None, POINTER(CThostFtdcQuoteActionField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnQuoteAction)
        self.h.tOnErrRtnQuoteAction(self.pSpi, self.FP_OnErrRtnQuoteAction)
        # 询价通知
        self.h.tOnRtnForQuoteRsp.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnForQuoteRsp.restype = None
        self.FP_OnRtnForQuoteRsp = CFUNCTYPE(None, POINTER(CThostFtdcForQuoteRspField))(self.__OnRtnForQuoteRsp)
        self.h.tOnRtnForQuoteRsp(self.pSpi, self.FP_OnRtnForQuoteRsp)
        # 保证金监控中心用户令牌
        self.h.tOnRtnCFMMCTradingAccountToken.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnCFMMCTradingAccountToken.restype = None
